--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
     </section>
 
-        <div class="container"> 
+        <div class="table-responsive"> 
             <table id="tablarayada" class="table table-striped bg-light">
                 <thead>
                     <tr>
